--- a/2)Assignments/Assignment4(Tuple)solution.ipynb
+++ b/2)Assignments/Assignment4(Tuple)solution.ipynb
@@ -370,12 +370,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "6472eeb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 13)"
+    "# Que 13)\n",
+    "matrix #--> alredy created in prev questions\n",
+    "\n",
+    "for row in matrix:\n",
+    "    for item in row:\n",
+    "        print(item)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c06e8b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (1,1,2,3,4,4,5,5,5,5)\n",
+    "unique_ele=set(tup)\n",
+    "print(unique_ele)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "aee04f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum: 1\n",
+      "Maximum: 6\n",
+      "Sum: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "def min_in_tuple(tup):\n",
+    "    return min(tup)\n",
+    "def max_in_tuple(tup):\n",
+    "    return max(tup)\n",
+    "def sum_of_tuple(tup):\n",
+    "    return sum(tup)\n",
+    "\n",
+    "sample_tup = (1,2,3,4,5,6)\n",
+    "\n",
+    "print(f\"Minimum: {min_in_tuple(sample_tup)}\")\n",
+    "print(f\"Maximum: {max_in_tuple(sample_tup)}\")\n",
+    "print(f\"Sum: {sum_of_tuple(sample_tup)}\")\n"
    ]
   }
  ],
