--- a/1)Notes/3-Data structures/Sets.ipynb
+++ b/1)Notes/3-Data structures/Sets.ipynb
@@ -3,18 +3,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets --> used to store collection of unique items \n",
+    "# they are unordered \n",
+    "# it useful for membership testing, eliminating duplicate entries\n",
+    "# and performing mathematical sets operations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n",
+      "<class 'set'>\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "# Creating a sets\n",
+    "\n",
+    "set1 = {1,2,3,4,5,6}\n",
+    "print(set1)\n",
+    "print(type(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = set([1,2,3,4,5,6,6,6])\n",
+    "print(set1)\n",
+    "#--> tuple is converted into set and removes duplicate element \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n",
+      "{1, 3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic Set operations\n",
+    "# 1) Adding and Removing ele from set\n",
+    "\n",
+    "set1.add(7)\n",
+    "print(set1)\n",
+    "\n",
+    "set1.remove(2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
