--- a/1)Notes/3-Data structures/Sets.ipynb
+++ b/1)Notes/3-Data structures/Sets.ipynb
@@ -9,7 +9,8 @@
     "# Sets --> used to store collection of unique items \n",
     "# they are unordered \n",
     "# it useful for membership testing, eliminating duplicate entries\n",
-    "# and performing mathematical sets operations "
+    "# and performing mathematical sets operations \n",
+    "# Set is based on FIFO principle"
    ]
   },
   {
@@ -76,6 +77,237 @@
     "\n",
     "set1.remove(2)\n",
     "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mset1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(set1)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 2"
+     ]
+    }
+   ],
+   "source": [
+    "set1.remove(2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2) Discard --> Removes an element if it is a member otherwise it will not show error like remove method\n",
+    "\n",
+    "set1.discard(2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "{3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3) pop -->\n",
+    "removed_element = set1.pop()\n",
+    "\n",
+    "print(removed_element)\n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4) Clear --> clears the all elements\n",
+    "\n",
+    "set1.clear()\n",
+    "set1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set Membership test --> It shows element is present in set or not\n",
+    "my_set={1,2,3,4,5}\n",
+    "print(3 in my_set)\n",
+    "print(10 in my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 9}\n",
+      "{1, 3, 5}\n",
+      "set()\n",
+      "{9, 7}\n",
+      "{7, 9}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mathematical operations\n",
+    "\n",
+    "set1 = {1,2,3,4,5,6}\n",
+    "set2 = {1,3,5,7,9}\n",
+    "\n",
+    "#union\n",
+    "union_set = set1.union(set2)\n",
+    "print(union_set)\n",
+    "\n",
+    "#intersection\n",
+    "intersection_sets = set1.intersection(set2)\n",
+    "print(intersection_sets)\n",
+    "\n",
+    "# intersection_update --> it updates all common elements in set1\n",
+    "set1.intersection_update(set2)\n",
+    "set1\n",
+    "\n",
+    "# Difference\n",
+    "\n",
+    "print(set1.difference(set2))\n",
+    "print(set2.difference(set1))\n",
+    "set2.difference_update(set1)\n",
+    "print(set2)\n",
+    "\n",
+    "# Symmetric Difference --> both unique elements are combined and common elements are removed\n",
+    "set1.symmetric_difference(set2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is subset\n",
+    "set1 ={1,2,3}\n",
+    "set2 = {4,5,6}\n",
+    "\n",
+    "print(set1.issubset(set2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to make unique elements list --> simply convert list into set\n",
+    "\n",
+    "lst = {1,2,3,4,4,5,6,6,6}\n",
+    "unique_lst=set(lst)\n",
+    "print(unique_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'about', 'In', 'we', 'are', 'to', 'this', 'sets', 'going', 'tutorial', 'discusse'}\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unique words in text\n",
+    "text = \"In this tutorial we are going to discusse about sets\"\n",
+    "\n",
+    "words = text.split()\n",
+    "\n",
+    "unique_words = set(words)\n",
+    "print(unique_words)\n",
+    "print(len(unique_words))"
    ]
   },
   {
