--- a/1)Notes/3-Data structures/Dictionaries.ipynb
+++ b/1)Notes/3-Data structures/Dictionaries.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,12 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['name', 'age', 'grades'])\n",
-      "dict_values(['abc', 33, 35])\n"
+      "dict_values(['vaibhs', 33, 35])\n",
+      "dict_items([('name', 'vaibhs'), ('age', 33), ('grades', 35)])\n",
+      "{'name': 'vaibhs', 'age': 33, 'grades': 35}\n",
+      "{'name': 'vaibhs', 'age': 33, 'grades': 35}\n",
+      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n",
+      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n"
      ]
     }
    ],
@@ -156,7 +161,20 @@
     "\n",
     "# 2) Returns all the values\n",
     "values = student.values()\n",
-    "print(values)"
+    "print(values)\n",
+    "\n",
+    "# 3) Returns all the key and value pairs\n",
+    "items = student.items()\n",
+    "print(items)\n",
+    "\n",
+    "# 4)shallow copy --> it copies structure of original dict and changes in original dict also changes in shallow copy and vice versa is possible\n",
+    "student_copy = student \n",
+    "print(student_copy)\n",
+    "student[\"name\"]= \"vaibhs\"\n",
+    "print(student_copy)\n",
+    "student_copy[\"age\"]=56\n",
+    "print(student)\n",
+    "print(student_copy)"
    ]
   },
   {
