--- a/1)Notes/3-Data structures/Dictionaries.ipynb
+++ b/1)Notes/3-Data structures/Dictionaries.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -144,12 +144,14 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['name', 'age', 'grades'])\n",
-      "dict_values(['vaibhs', 33, 35])\n",
-      "dict_items([('name', 'vaibhs'), ('age', 33), ('grades', 35)])\n",
-      "{'name': 'vaibhs', 'age': 33, 'grades': 35}\n",
-      "{'name': 'vaibhs', 'age': 33, 'grades': 35}\n",
+      "dict_values(['vaibhs', 56, 35])\n",
+      "dict_items([('name', 'vaibhs'), ('age', 56), ('grades', 35)])\n",
       "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n",
-      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n"
+      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n",
+      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n",
+      "{'name': 'vaibhs', 'age': 56, 'grades': 35}\n",
+      "{'name': 'abc', 'age': 56, 'grades': 35}\n",
+      "{'name': 'abc', 'age': 56, 'grades': 35}\n"
      ]
     }
    ],
@@ -167,14 +169,84 @@
     "items = student.items()\n",
     "print(items)\n",
     "\n",
-    "# 4)shallow copy --> it copies structure of original dict and changes in original dict also changes in shallow copy and vice versa is possible\n",
+    "# 4)shallow copy --> it copies structure of original dict and changes in original dict also changes in shallow copy and vice versa is possible.\n",
     "student_copy = student \n",
     "print(student_copy)\n",
     "student[\"name\"]= \"vaibhs\"\n",
     "print(student_copy)\n",
     "student_copy[\"age\"]=56\n",
     "print(student)\n",
+    "print(student_copy)\n",
+    "\n",
+    "student[\"name\"]=\"abc\"\n",
+    "print(student)\n",
     "print(student_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'abc', 'age': 56, 'grades': 35}\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1=student.copy()\n",
+    "print(student1)\n",
+    "student[\"name\"]=\"xyz\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'abc', 'age': 56, 'grades': 35}\n",
+      "{'name': 'xyz', 'age': 56, 'grades': 35}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student1)\n",
+    "print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'xyz', 'age': 56, 'grades': 35}\n",
+      "{'name': 'abc', 'age': 56, 'grades': 35}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student)\n",
+    "print(student1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note --> Always use copu() function for shallow copy....\n"
    ]
   },
   {
