--- a/1)Notes/3-Data structures/Dictionaries.ipynb
+++ b/1)Notes/3-Data structures/Dictionaries.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note --> Always use copu() function for shallow copy....\n"
+    "# Note --> Always use copy() function for shallow copy....\n"
    ]
   },
   {
