--- a/1)Notes/3-Data structures/Dictionaries.ipynb
+++ b/1)Notes/3-Data structures/Dictionaries.ipynb
@@ -251,10 +251,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'xyz', 'age': 56, 'grades': 35}\n",
+      "\n",
+      "name\n",
+      "age\n",
+      "grades\n",
+      "\n",
+      "xyz\n",
+      "56\n",
+      "35\n",
+      "\n",
+      "('name', 'xyz')\n",
+      "('age', 56)\n",
+      "('grades', 35)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterarting over dict \n",
+    "\n",
+    "# 1) iterating over key's of dict\n",
+    "\n",
+    "print(student)\n",
+    "print()\n",
+    "for keys in student.keys():\n",
+    "    print(keys)\n",
+    "\n",
+    "print()    \n",
+    "\n",
+    "# 2) iterating over values of dict \n",
+    "for values in student.values():\n",
+    "    print(values)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# 3) Iterating over items(pair of key's and values)\n",
+    "\n",
+    "for items in student.items():\n",
+    "    print(items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'student1': {'name': 'abc', 'age': 20}, 'student2': {'name': 'xyz', 'age': 21}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested Dict\n",
+    "nested_dict = {\n",
+    "    \"student1\":{\"name\":\"abc\",\"age\":20},\n",
+    "    \"student2\":{\"name\":\"xyz\",\"age\":21}\n",
+    "}\n",
+    "print(nested_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "{'name': 'xyz', 'age': 21}\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing Nested dictionaries\n",
+    "print(nested_dict[\"student1\"][\"name\"])\n",
+    "print(nested_dict[\"student2\"])\n",
+    "print(nested_dict[\"student2\"][\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['student1', 'student2'])\n",
+      "dict_values([{'name': 'abc', 'age': 20}, {'name': 'xyz', 'age': 21}])\n",
+      "dict_items([('student1', {'name': 'abc', 'age': 20}), ('student2', {'name': 'xyz', 'age': 21})])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nested_dict.keys())\n",
+    "print(nested_dict.values())\n",
+    "print(nested_dict.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student1:{'name': 'abc', 'age': 20}\n",
+      "name:abc\n",
+      "age:20\n",
+      "student2:{'name': 'xyz', 'age': 21}\n",
+      "name:xyz\n",
+      "age:21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating over nested dictionaries\n",
+    "for student_info, student_id in nested_dict.items():\n",
+    "    print(f\"{student_info}:{student_id}\")\n",
+    "    for keys, values in student_id.items():\n",
+    "        print(f\"{keys}:{values}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary comprehension \n",
+    "squares = {x:x**2 for x in range(1,11)}\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 4, 4: 16, 6: 36, 8: 64, 10: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# condition Dict comprehension \n",
+    "squares={x:x**2 for x in range(1,11) if x%2==0}\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 1, 3: 3, 4: 2, 5: 1, 6: 6, 66: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Practical Examples \n",
+    "# 1) Used to count frequency element in list\n",
+    "numbers = [1,2,3,3,3,4,4,5,6,6,6,6,6,66,6]\n",
+    "frequency = {}\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number in frequency:\n",
+    "        frequency[number]+=1\n",
+    "    else:\n",
+    "        frequency[number]=1\n",
+    "\n",
+    "print(frequency)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 3, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# merging of dictionaries\n",
+    "dict1={\"a\":1,\"b\":2}\n",
+    "dict2={\"b\":3,\"c\":4}\n",
+    "\n",
+    "merged_dict={**dict1,**dict2} #--> ** this operator unpacks dict --> in these dicts b is repeated and oveeerlapped thats why it overlaps dict 2 over dict1 and takes values from dict2\n",
+    "\n",
+    "print(merged_dict)"
+   ]
   }
  ],
  "metadata": {
