--- a/2)Assignments/Assignment5(Dict)solution.ipynb
+++ b/2)Assignments/Assignment5(Dict)solution.ipynb
@@ -69,10 +69,233 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 1)\n",
+    "dict = {x:x**2 for x in range(1,11)}\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ff350e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5:25\n",
+      "keys of dict:[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 2)\n",
+    "print(f\"5:{dict[5]}\")\n",
+    "print(f\"keys of dict:{list(dict.keys())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1efdde30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 3)\n",
+    "dict[11]=121\n",
+    "dict.pop(1)\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b7af91f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2:4\n",
+      "3:9\n",
+      "4:16\n",
+      "5:25\n",
+      "6:36\n",
+      "7:49\n",
+      "8:64\n",
+      "9:81\n",
+      "10:100\n",
+      "11:121\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 4)\n",
+    "for keys,values in dict.items():\n",
+    "    print(f\"{keys}:{values}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0da01dfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729, 10: 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 5)\n",
+    "d = {x:x**3 for x in range(1,11)}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "16fed5b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {x:x**2 for x in range(1,6)}\n",
+    "d2 = {x:x**2 for x in range(6,11)}\n",
+    "\n",
+    "d3 = {**d1,**d2}\n",
+    "print(d3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c4007c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'jon doe', 'age': 23, 'grades': {'science': 35, 'maths': 56, 'english': 67}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 7)\n",
+    "student = {\n",
+    "    \"name\":\"jon doe\",\n",
+    "    \"age\":23,\n",
+    "    \"grades\":{\"science\":35,\n",
+    "              \"maths\":56,\n",
+    "              \"english\":67}\n",
+    "}\n",
+    "print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f1f83b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [1, 2, 3, 4, 5], 2: [2, 4, 6, 8, 10], 3: [3, 6, 9, 12, 15], 4: [4, 8, 12, 16, 20], 5: [5, 10, 15, 20, 25]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 8)\n",
+    "multiple = {i:[i*j for j in range (1,6)] for i in range(1,6)}\n",
+    "print(multiple)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e32e057c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: (1, 1), 2: (2, 4), 3: (3, 9), 4: (4, 16), 5: (5, 25)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 9)\n",
+    "squares = {i:(i, i**2) for i in range(1,6)}\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e677f959",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (2, 4), (3, 9), (4, 16), (5, 25)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 10)\n",
+    "d = {i:i**2 for i in range(1,6)}\n",
+    "\n",
+    "list_of_tuples = list(d.items())\n",
+    "print(list_of_tuples)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "8d34f31f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 11)\n"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
