--- a/2)Assignments/Assignment5(Dict)solution.ipynb
+++ b/2)Assignments/Assignment5(Dict)solution.ipynb
@@ -289,13 +289,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d34f31f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100}\n",
+      "{2: 4, 4: 16, 6: 36, 8: 64, 10: 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 11)\n"
+    "# Que 11)\n",
+    "dict = {i:i**2 for i in range(1,11)}\n",
+    "print(dict)\n",
+    "\n",
+    "even_dict = {j:k for j, k in dict.items() if k %2 == 0}\n",
+    "print(even_dict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a19c59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
