--- a/2)Assignments/Assignment5(Dict)solution.ipynb
+++ b/2)Assignments/Assignment5(Dict)solution.ipynb
@@ -313,11 +313,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "58a19c59",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
+      "{1: 1, 4: 2, 9: 3, 16: 4, 25: 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 12)\n",
+    "dict = {i:i**2 for i in range(1,6)}\n",
+    "print(dict)\n",
+    "swapped_dict = {k:j for j, k in dict.items()}\n",
+    "print(swapped_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e5e6d714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'a': [1], 'b': [2]})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Que 13)\n",
+    "from collections import defaultdict\n",
+    "default_dict = defaultdict(list)\n",
+    "default_dict['a'].append(1)\n",
+    "default_dict['b'].append(2)\n",
+    "\n",
+    "print(default_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03157b7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 14)\n"
+   ]
   }
  ],
  "metadata": {
