--- a/2)Assignments/Assignment5(Dict)solution.ipynb
+++ b/2)Assignments/Assignment5(Dict)solution.ipynb
@@ -360,13 +360,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c03157b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Que 14)\n"
+    "# Que 14)\n",
+    "def count_chars(s):\n",
+    "    count_dict = {}\n",
+    "    for char in s:\n",
+    "        count_dict[char] = count_dict.get(char, 0) + 1\n",
+    "    return count_dict\n",
+    "\n",
+    "string = \"hello world\"\n",
+    "print(count_chars(string))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efe520b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02904603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
