--- a/2)Assignments/Assignment5(Dict)solution.ipynb
+++ b/2)Assignments/Assignment5(Dict)solution.ipynb
@@ -386,19 +386,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4efe520b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02904603",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"title\": \"To Kill a Mockingbird\", \"author\": \"Harper Lee\", \"year\": 1960, \"genre\": \"Fiction\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "book = {\n",
+    "    'title': 'To Kill a Mockingbird',\n",
+    "    'author': 'Harper Lee',\n",
+    "    'year': 1960,\n",
+    "    'genre': 'Fiction'\n",
+    "}\n",
+    "book_json = json.dumps(book)\n",
+    "print(book_json)"
+   ]
   }
  ],
  "metadata": {
