--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -47,15 +47,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# function with multiple parameter\n",
     "\n",
     "def add(a,b):\n",
     "    c = a+b\n",
-    "    \n"
+    "    return c\n",
+    "add(2,3)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Vaibhs\n",
+      "hello Guest\n"
+     ]
+    }
+   ],
+   "source": [
+    "# default parameters \n",
+    "def greet(name=\"Guest\"): #--> Default Parameter is Guest \n",
+    "    print(f\"hello {name}\")\n",
+    "\n",
+    "greet(\"Vaibhs\")\n",
+    "greet()"
    ]
   },
   {
