--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -125,11 +125,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:vaibhs\n",
+      "age:20\n",
+      "country:india\n"
+     ]
+    }
+   ],
    "source": [
-    "# keyword arguments"
+    "# keyword arguments --> **kwargs --> keyword args are in key value pairs \n",
+    "def print_details(**kwargs):\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")\n",
+    "\n",
+    "print_details(name = \"vaibhs\", age = 20, country = 'india')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positional args :1\n",
+      "positional args :2\n",
+      "positional args :3\n",
+      "positional args :4\n",
+      "positional args :5\n",
+      "name:vaibhs\n",
+      "age:20\n",
+      "country:india\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_details(*args, **kwargs):\n",
+    "    for val in args:\n",
+    "        print(f\"positional args :{val}\")\n",
+    "\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")\n",
+    "\n",
+    "print_details(1,2,3,4,5,name = \"vaibhs\", age = 20, country = 'india')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Return statement\n",
+    "def multi(a,b):\n",
+    "    return a*b\n",
+    "multi(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Return multiple staements\n",
+    "def multi(a,b):\n",
+    "    return a*b,a\n",
+    "\n",
+    "multi(2,3)"
    ]
   }
  ],
