--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "(6, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,6 +224,59 @@
     "\n",
     "multi(2,3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#function examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77.0\n",
+      "8.333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example 1) Temperature conversion\n",
+    "def Temp_conversion(temp,unit):\n",
+    "    \"\"\"This function converts temp between celsius and fahrenheit\"\"\"\n",
+    "    if unit == \"C\":\n",
+    "        return temp*9/5 + 32 # celsius to F conversion\n",
+    "    elif unit ==\"F\":\n",
+    "        return (temp-32)*5/9\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "print(Temp_conversion(25,\"C\"))\n",
+    "print(Temp_conversion(47,\"F\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PAssword strength checker\n",
+    "def is_strong_password()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
