--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -263,12 +263,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# PAssword strength checker\n",
-    "def is_strong_password()"
+    "def is_strong_password(password):\n",
+    "    \"\"\"Tis function checks if the password is strong or not\"\"\"\n",
+    "    if len(password)<8:\n",
+    "        return False\n",
+    "    \n",
+    "    if not any(char.isdigit() for char in password):\n",
+    "        return False\n",
+    "    \n",
+    "    if not any(char.islower() for char in password):\n",
+    "        return False\n",
+    "    \n",
+    "    if not any(char.isupper() for char in password):\n",
+    "        return False\n",
+    "    \n",
+    "    if not any(char in '!@#$%^&*' for char in password):\n",
+    "        return False\n",
+    "    return True\n",
+    "# Calling the function\n",
+    "print(is_strong_password(\"Weakpass1223\"))\n",
+    "print(is_strong_password(\"StrongPass@123\"))\n"
    ]
   },
   {
