--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -233,6 +233,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 1) --> Temperature conversion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -247,7 +254,7 @@
     }
    ],
    "source": [
-    "#Example 1) Temperature conversion\n",
+    "\n",
     "def Temp_conversion(temp,unit):\n",
     "    \"\"\"This function converts temp between celsius and fahrenheit\"\"\"\n",
     "    if unit == \"C\":\n",
@@ -259,6 +266,13 @@
     "    \n",
     "print(Temp_conversion(25,\"C\"))\n",
     "print(Temp_conversion(47,\"F\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Example 2)--> Password strength checker"
    ]
   },
   {
@@ -276,7 +290,7 @@
     }
    ],
    "source": [
-    "# PAssword strength checker\n",
+    "\n",
     "def is_strong_password(password):\n",
     "    \"\"\"Tis function checks if the password is strong or not\"\"\"\n",
     "    if len(password)<8:\n",
@@ -300,11 +314,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Example 3)--> Calculate the total cost of items in a shopping cart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "360"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def toatl_cost_calculator(cart):\n",
+    "    total_cost=0\n",
+    "    for item in cart:\n",
+    "        total_cost+=item[\"price\"]*item[\"quantity\"]\n",
+    "\n",
+    "    return total_cost\n",
+    "cart = [\n",
+    "    {\"name\":\"apple\",\"price\":25,\"quantity\":6},\n",
+    "    {\"name\":\"banana\",\"price\":5,\"quantity\":12},\n",
+    "    {\"name\":\"mango\",\"price\":25,\"quantity\":6}\n",
+    "]\n",
+    "\n",
+    "toatl_cost_calculator(cart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Example 4)-->check if string is palindrome\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(s):\n",
+    "    s=s.lower().replace(\" \",\"\")\n",
+    "    return s==s[::-1]\n",
+    "print(is_palindrome(\"A man A Plan a canal panama\"))\n",
+    "print(is_palindrome(\"hello\"))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 5) --> Calculate the factorial of number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n-1)\n",
+    "    \n",
+    "factorial(5)"
+   ]
   }
  ],
  "metadata": {
