sample.txt created

--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -417,6 +417,36 @@
     "    \n",
     "factorial(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 6) A function to read a file and count the frequency of each word\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_word_frequency(file_path):\n",
+    "    word_count={}\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            words=line.split()\n",
+    "            for words in word:\n",
+    "                word=word.lower().strip('.,!?;:\"/')\n",
+    "                word_count[word]=word_count.get(word,0)+1\n",
+    "\n",
+    "\n",
+    "    return word_count\n",
+    "\n",
+    "file_path = 'sample.txt'\n",
+    "\n",
+    "word_frequency = count_word_frequency"
+   ]
   }
  ],
  "metadata": {
