--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -427,16 +427,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hello': 1, 'world': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "def count_word_frequency(file_path):\n",
     "    word_count={}\n",
     "    with open(file_path, 'r') as file:\n",
     "        for line in file:\n",
     "            words=line.split()\n",
-    "            for words in word:\n",
+    "            for word in words:\n",
     "                word=word.lower().strip('.,!?;:\"/')\n",
     "                word_count[word]=word_count.get(word,0)+1\n",
     "\n",
@@ -445,8 +453,16 @@
     "\n",
     "file_path = 'sample.txt'\n",
     "\n",
-    "word_frequency = count_word_frequency"
+    "word_frequency = count_word_frequency(file_path)\n",
+    "print(word_frequency)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
