--- a/1)Notes/4-Functions/functions.ipynb
+++ b/1)Notes/4-Functions/functions.ipynb
@@ -458,6 +458,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example 7) Validate email address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re \n",
+    "\n",
+    "def is_valid_email(email):\n",
+    "    \"\"\"This function checks email is valid or not \"\"\"\n",
+    "    pattern = r'^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
+    "    return re.match(pattern,email) is not None\n",
+    "\n",
+    "print(is_valid_email(\"test@example.com\"))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
