--- a/1)Notes/4-Functions/Lambda_function.ipynb
+++ b/1)Notes/4-Functions/Lambda_function.ipynb
@@ -31,6 +31,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lambda function"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
