--- a/1)Notes/4-Functions/Lambda_function.ipynb
+++ b/1)Notes/4-Functions/Lambda_function.ipynb
@@ -31,11 +31,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "# lambda function"
+    "# lambda function\n",
+    "add = lambda a,b:a+b\n",
+    "print(add(2,5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "even1 = lambda num: num%2==0\n",
+    "print(even1(12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "add = lambda x,y,z: x+y+z\n",
+    "print(add(2,3,4))"
    ]
   },
   {
@@ -43,7 +89,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#hello"
+   ]
   }
  ],
  "metadata": {
