--- a/1)Notes/4-Functions/Lambda_function.ipynb
+++ b/1)Notes/4-Functions/Lambda_function.ipynb
@@ -117,6 +117,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square(x):\n",
+    "    return x*x\n",
+    "\n",
+    "numbers = [1,2,3,4,5]\n",
+    "print(list(map(square,numbers)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
