--- a/1)Notes/4-Functions/Lambda_function.ipynb
+++ b/1)Notes/4-Functions/Lambda_function.ipynb
@@ -138,6 +138,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# map function with multiple iterables \n",
+    "\n",
+    "num1 = [1,2,3]\n",
+    "num2 = [4,5,6]\n",
+    "\n",
+    "added_numbers = list(map(lambda x,y:x+y,num1,num2))\n",
+    "print(added_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# map() to convert a list of strings to integers --> inshort typecasting\n",
+    "str_num = ['1','2','3']\n",
+    "int_num = list(map(int,str_num))\n",
+    "print(int_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
