--- a/1)Notes/4-Functions/Lambda_function.ipynb
+++ b/1)Notes/4-Functions/Lambda_function.ipynb
@@ -181,6 +181,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vaibhs', 'jonh']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_name(person):\n",
+    "    return person[\"name\"]\n",
+    "\n",
+    "people=[\n",
+    "    {'name':'vaibhs','age':20},\n",
+    "    {'name':'jonh','age':22}\n",
+    "]\n",
+    "\n",
+    "list(map(get_name,people))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
