--- a/1)Notes/4-Functions/filter_function.ipynb
+++ b/1)Notes/4-Functions/filter_function.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "filter() function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the filter function constructs an iterator from elements of an iterable from elements of an iterable for which a function returns true. it is used to filter out items from list based on conditions\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
