--- a/1)Notes/4-Functions/filter_function.ipynb
+++ b/1)Notes/4-Functions/filter_function.ipynb
@@ -84,6 +84,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter with lambda function"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
