--- a/1)Notes/4-Functions/filter_function.ipynb
+++ b/1)Notes/4-Functions/filter_function.ipynb
@@ -84,19 +84,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# filter with lambda function"
+    "# filter with lambda function\n",
+    "even_and_greater_than_five = list(filter(lambda x:x>5 and x%2==0, numbers))\n",
+    "print(even_and_greater_than_five)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'vaibhs', 'age': 20}, {'name': 'jonh', 'age': 22}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter()to check if the age is greater than 15 in dict\n",
+    "\n",
+    "people=[\n",
+    "    {'name':'vaibhs','age':20},\n",
+    "    {'name':'jonh','age':22},\n",
+    "    {'name':'Doe','age':12}\n",
+    "]\n",
+    "\n",
+    "def age_greater(person):\n",
+    "    return person['age']>15\n",
+    "\n",
+    "list(filter(age_greater,people))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The filter function is powerful tool for creating iterators that filter items out of an iterable based on a function. it is commonly used for data cleaning, filtering objects, and removing unwanted elements from lists.\n"
+   ]
   }
  ],
  "metadata": {
