--- a/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
+++ b/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
@@ -10,11 +10,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "modules contains inbuilt functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pi, sqrt\n",
+    "print(sqrt(16))\n",
+    "print(pi)"
+   ]
   },
   {
    "cell_type": "code",
@@ -31,7 +51,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.1"
   }
  },
