--- a/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
+++ b/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "array([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,6 +55,25 @@
    "source": [
     "import numpy as np\n",
     "np.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import * # --> * means import all inbuilt functions from that module\n",
+    "\n",
+    "print(sqrt(16))"
    ]
   },
   {
