new file created

--- a/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
+++ b/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
@@ -77,6 +77,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Custom Packages\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "syntax --> from package_folder_name.package_file_name import particular_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from custom_package.vaibhs import addition\n",
+    "addition(2,3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
