--- a/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
+++ b/1)Notes/5-Modules and Packages/ImportModules&Packages.ipynb
@@ -113,11 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# hello"
+    "# Subpackages\n",
+    "from custom_package.subpackages.mult import multi\n",
+    "\n",
+    "multi(2,3)"
    ]
   },
   {
