--- a/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
+++ b/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
@@ -52,12 +52,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3) random --> gives random values\n",
+    "\n",
+    "import random \n",
+    "print(random.randint(1,10))\n",
+    "print(random.choice(['apple','banana','cherry']))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\AIML\\GIT\\Machine-learning-course\\1)Notes\\5-Modules and Packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4) file and directory access lib\n",
+    "\n",
+    "import os\n",
+    "print(os.getcwd()) # --> getting path of current working directory\n",
+    "os.mkdir('test_dir') # --> used to create folder in cwd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 3) random --> gives random values\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
