--- a/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
+++ b/1)Notes/5-Modules and Packages/StandardLibrary.ipynb
@@ -97,10 +97,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'destination.txt'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5) High level operations on files and collection of files\n",
+    "import shutil\n",
+    "shutil.copy('source.txt','destination.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "{\"name\": \"krish\", \"age\": 25}\n",
+      "{'name': 'krish', 'age': 25}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6) Data serialization\n",
+    "import json\n",
+    "data = {'name':'krish','age':25}\n",
+    "\n",
+    "json_str = json.dumps(data)\n",
+    "print(type(json_str))\n",
+    "print(json_str)\n",
+    "\n",
+    "parsed_data=json.loads(json_str)\n",
+    "\n",
+    "print(parsed_data)\n",
+    "print(type(parsed_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 7) csv\n",
+    "\n",
+    "import csv\n"
+   ]
   }
  ],
  "metadata": {
